--- a/compose.yaml
+++ b/compose.yaml
@@ -2,10 +2,13 @@ volumes:
   data:
   prometheus-data:
   grafana_data:
+  es-data:
+  vector-data:
 
 services:
   storage:
     image: minio/minio:latest
+    container_name: storage
     command: server /data
     restart: always
     expose: 
@@ -24,6 +27,7 @@ services:
 
   createbuckets:
     image: minio/mc
+    container_name: minio
     depends_on:
       - storage
     restart: on-failure
@@ -37,6 +41,7 @@ services:
 
   uploader:
     build: ./uploader
+    container_name: uploader
     depends_on:
       - storage
       - createbuckets
@@ -52,6 +57,7 @@ services:
   
   security:
     build: ./security
+    container_name: security
     expose: 
       - 3000
     environment:
@@ -59,6 +65,7 @@ services:
 
   gateway:
     image: nginx:alpine
+    container_name: gateway
     volumes:
       - ./gateway/nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
@@ -67,3 +74,65 @@ services:
       - storage
       - uploader
       - security
+  
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=true
+      - ELASTIC_PASSWORD=qwerty123456
+    volumes:
+      - es-data:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
+
+
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.17.0
+    container_name: kibana
+    environment:
+      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+      ELASTICSEARCH_USERNAME: elastic
+      ELASTICSEARCH_PASSWORD: qwerty123456
+    ports:
+      - "8081:5601"
+    depends_on:
+      - elasticsearch
+
+  vector:
+    image: timberio/vector:0.37.0-alpine
+    container_name: vector
+    command: ["--config", "/etc/vector/vector.toml"]
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./vector/vector.toml:/etc/vector/vector.toml:ro
+    depends_on:
+      - elasticsearch
+
+  prometheus:
+    image: prom/prometheus:v2.51.0
+    container_name: prometheus
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    ports:
+      - "9090:9090"
+    networks:
+      - default
+
+  grafana:
+    image: grafana/grafana:10.4.2
+    container_name: grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=qwerty123456
+    volumes:
+      - ./monitoring/grafana:/var/lib/grafana
+    ports:
+      - "8082:3000"
+    user: root
+    depends_on:
+      - prometheus
+    networks:
+      - default
